# jr-license-server-rust

./: .gitignore  ANS1KEY  Cargo.toml  KEY  LICENSE  README.md
src/: main.rs
src/config/: app.rs
src/handler/: index_handler.rs  leases_handler.rs  mod.rs  ping_handler.rs  ticket_handler.rs  validate_handler.rs
src/util/: sign.rs
