[package]
name = "jr-license-server-rust"
version = "0.1.0"
authors = ["dupp <dupp@wasu.com>"]
edition = "2018"

[dependencies]
lazy_static = "1.4.0"
actix-web = "3.1.0"
actix-service = "1.0.6"
actix-rt = "1.1.1"
env_logger = "0.7.1"
log = "0.4.11"
serde = "1.0.116"
serde_json = "1.0.58"
serde_derive = "1.0.116"
openssl = "0.10.32"
base64 = "0.13.0"
hex = "0.4.2"