[package]
name = "jr-license-server-rust"
version = "0.1.0"
authors = ["dupp <dupp@wasu.com>"]
edition = "2018"

[dependencies]
lazy_static = "1.4.0"
actix-web = "3.1.0"
actix-service = "2.0.2"
actix-rt = "2.6.0"
env_logger = "0.9.0"
log = "0.4.11"
serde = "1.0.116"
serde_json = "1.0.58"
serde_derive = "1.0.116"
base64 = "0.13.0"
hex = "0.4.2"
dotenv = "0.15.0"

[dependencies.openssl]
version = "0.10.32"
features = ["vendored"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
incremental = false
opt-level = "s"
