[package]
name = "jr-license-server"
version = "0.1.0"
authors = ["binarii<karl50018@gmail.com>"]
edition = "2021"

[dependencies]
lazy_static = "1.4.0"
actix-web = "3.1.0"
actix-service = "2.0.2"
actix-rt = "2.6.0"
env_logger = "0.9.0"
log = "0.4.11"
serde = "1.0.116"
serde_json = "1.0.58"
serde_derive = "1.0.116"
base64 = "0.13.0"
hex = "0.4.2"
dotenv = "0.15.0"

[dependencies.openssl]
version = "0.10"
features = ["vendored"]

[profile.release]
strip = true
incremental = false
panic = "abort"
codegen-units = 1
lto = true
opt-level = 3
